--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -6,12 +6,13 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="{% static 'css/base.css' %}">
-    <title>Document</title>
+    <title>Gabriel Usen</title>
     <link href="{% static 'css/base.css' %}" type="text/css" rel="stylesheet"/>
 </head>
 <body>
     <header>
         <nav class="listings">
+            <img src="{% static 'images/logo_transparent.png' %}" class="logo"/>
             <ul>
                 <li><a href="{% url 'home' %}">home</a></li>
                 <li><a href="">projects</a></li>
