--- a/pages/static/css/base.css
+++ b/pages/static/css/base.css
@@ -1,7 +1,7 @@
 body {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     font-size: px;
-    font-size: 2rem;
+    font-size: 1.3rem;
     line-height: 1.2rem;
     background-color: rgb(0, 0, 0, 0.1);
 }
@@ -30,4 +30,9 @@ li{
 
 a{
     text-decoration: none;
+}
+
+a:hover{
+    text-decoration: underline;
+    color: ;
 }
