--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="listings">
-            <img src="{% static 'images/logo_transparent.png' %}" class="logo"/>
+            <a href="{% url 'home' %}"><img src="{% static 'images/logo_transparent.png' %}" class="logo"/></a>
             <ul>
                 <li><a href="{% url 'home' %}">home</a></li>
                 <li><a href="">projects</a></li>
