--- a/pages/static/css/base.css
+++ b/pages/static/css/base.css
@@ -1,9 +1,15 @@
 body {
     font-family: Helvetica, Arial, sans-serif;
-    font-size: px;
     font-size: 1.3rem;
     line-height: 1.2rem;
     background-color: rgb(0, 0, 0, 0.1);
+    background: url('../images/nice.jpg') no-repeat center center/cover;
+    background-size: 100%;
+    z-index: 2;
+    linear-gradient(
+      rgba(0, 0, 0, 0.6),
+      rgba(0, 0, 0, 0.6)
+    ),
 }
 
 nav{
@@ -16,6 +22,8 @@ ul{
     float: right;
     padding-right: 5rem;
     padding-top: 3rem;
+    font-size: 1.6rem;
+
 }
 
 li{
@@ -34,5 +42,24 @@ a{
 
 a:hover{
     text-decoration: underline;
-    color: ;
+    color: darken(@link-color, 15%);
 }
+
+.container{
+    font-family: 'roboto', sans-serif;
+    font-weight: 300;
+    color: white;
+    top: 50%;
+    left: 50%;
+}
+
+h1{
+    text-transform: uppercase;
+    word-spacing: 0.9rem;
+    font-size: 5rem;
+}
+
+.name{
+    letter-spacing: 0.3rem;
+}
+
