--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -22,19 +22,18 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
+<div class="griffin">
     <header>
-        <nav class="">
-            <div class="container">
-                <a href="{% url 'home' %}"><img src="{% static 'images/logo_transparent.png' %}" height="100" width="100"/></a>
-                <ul id="nav-mobile" class="right">
-                    <li><a href="{% url 'home' %}">home</a></li>
-                    <li><a href="">projects</a></li>
-                    <li><a href="">apod</a></li>
-                </ul>
-            </div>
-        </nav>
+        <div class="container">
+            <a href="{% url 'home' %}"><img src="{% static 'images/logo_transparent.png' %}" height="100" width="100"/></a>
+            <ul id="nav-mobile" class="right">
+                <li><a href="{% url 'home' %}">home</a></li>
+                <li><a href="">projects</a></li>
+                <li><a href="">apod</a></li>
+            </ul>
+        </div>
     </header>
-    <div class="container">
+    <div class="container second">
         <div class="adjust">
             <p class="name">Hi, my name is</p>
             <h1><strong>Gabriel Usen.</strong></h1>
@@ -43,6 +42,7 @@
             <p >Lagos, Nigeria. {{ today_str }}</p>
         </div>
     </div>
+</div>
 {% block content %}
 {% endblock content %}
 </body>
