--- a/pages/static/css/base.css
+++ b/pages/static/css/base.css
@@ -28,7 +28,7 @@ nav{
 }
 
 ul{
-    word-spacing: 1.2rem;
+    word-spacing: 1.8rem;
     text-transform: capitalize;
     float: right;
     font-size: 1.6rem;
@@ -56,6 +56,7 @@ a:hover{
     color: darken(@link-color, 15%);
 }
 
+/* container */
 .container{
     padding-top: 2rem;
     font-family: 'Baloo Thambi 2', cursive;
@@ -82,13 +83,11 @@ h1{
     max-width: 70%;
     padding-top: 5rem;
     margin: 1rem auto;
-    overflow: hidden;
     padding-left: 2rem;
     padding-right: 2rem;
 }
 
-strong{
+.glitch{
     font-family: "SultanNahiaW20";
-    font-size: 5rem;
+    font-size: 7rem;
 }
-
