--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -28,7 +28,7 @@
             <a href="{% url 'home' %}"><img src="{% static 'images/logo_transparent.png' %}" height="100" width="100"/></a>
             <ul id="nav-mobile" class="right">
                 <li><a href="{% url 'home' %}">home</a></li>
-                <li><a href="">projects</a></li>
+                <li><a href="" id="#project">projects</a></li>
                 <li><a href="">contact</a></li>
                 <li><a href="">apod</a></li>
             </ul>
@@ -44,11 +44,9 @@
         </div>
     </div>
 </div>
-<section class="">
-    <div class="container">
-        <div class="projects">
-            <
-        </div>
+<section class="project-section">
+    <div class="container-size">
+        <h1 id="project">Projects</h1>
     </div>
 </section>
 {% block content %}
