--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -25,7 +25,7 @@
                 <li><a href="{% url 'home' %}">home</a></li>
                 <li><a href="" id="#project">projects</a></li>
                 <li><a href="" id="#contact-me">contact</a></li>
-                <li><a href="">apod</a></li>
+                <li><a href="" class="btn waves-effect waves-teal">apod</a></li>
             </ul>
         </div>
     </header>
@@ -43,7 +43,7 @@
     <div class="container-size">
         <h2 id="project">Projects</h2>
         {% for project in object_list %}
-        <div class="card justify-content-center" style="width: 18rem; display: inline-block; margin-right: 2rem;">
+        <div class="card justify-content-center" style="width: 18rem; display: inline-block; margin-right:  ">
             <div class="card-body">
                 <h5 class="card-title">{{ project.title }}</h5>
                 <h6 class="card-subtitle mb-2 text-muted">{{ project.technology }}</h6>
@@ -78,6 +78,21 @@
         </fieldset>
             <button	type="submit" class="btn btn-primary">Submit</button>
     </form>--->
+    <form style="margin: 0 auto; width:400px;">
+        <div class="form-group">
+            <input type="text" class="form-control" placeholder="Name">
+        </div>
+        <div class="form-group">
+            <input type="email" class="form-control" placeholder="name@example.com">
+        </div>
+        <div class="form-group">
+            <input type="text" class="form-control" id="inputEmail4" placeholder="Subject">
+        </div>
+        <div class="form-group">
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="..."></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 </section>
 {% block content %}
 {% endblock content %}
