--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -48,8 +48,8 @@
                 <h5 class="card-title">{{ project.title }}</h5>
                 <h6 class="card-subtitle mb-2 text-muted">{{ project.technology }}</h6>
                 <p class="card-text">{{ project.description }}</p>
-                <a href="#" class="card-link">Github</a>
-                <a href="#" class="card-link">Demo</a>
+                <a href="{{ project.url }}" class="card-link">Github</a>
+                <a href="{{ project.demo }}" class="card-link">Demo</a>
             </div>
         </div>
         {% endfor %}
@@ -57,28 +57,7 @@
 </section>
 <section id="contact" class="text-center">
     <h2>Contact</h2>
-    <!--<form method="post">
-        <fieldset class="form-group">
-            <div class="col-xs-4">
-                <label></label>
-                <input type="email"	class="form-control" placeholder="Enter email">
-            </div>
-        </fieldset>
-        <fieldset class="form-group">
-            <div class="col-xs-4">
-                <label></label>
-                <input	type="text"	class="form-control" placeholder="Name">
-            </div>
-        </fieldset>
-        <fieldset class="form-group">
-            <div class="col-xs-4">
-                <label></label>
-                <textarea class="form-control" rows="3"></textarea>
-            </div>
-        </fieldset>
-            <button	type="submit" class="btn btn-primary">Submit</button>
-    </form>--->
-    <form style="margin: 0 auto; width:400px;">
+    <form style="margin: 0 auto; width:400px;" method="post">
         <div class="form-group">
             <input type="text" class="form-control" placeholder="Name">
         </div>
