--- a/pages/templates/contact.html
+++ b/pages/templates/contact.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load crispy_forms_tags %}
+
 {% block title %} contact {% endblock title %}
 {% block content %}
 <h2>Contact</h2>
@@ -8,8 +10,8 @@
 {% else %}
     <form action="email" method="post" role="form">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Submit" />
+        {{ form|crispy }}
+        <button type="submit" class="btn btn-success">Submit</button>
     </form>
 {% endif %}
 
