--- a/pages/templates/contact.html
+++ b/pages/templates/contact.html
@@ -4,15 +4,27 @@
 
 {% block title %} contact {% endblock title %}
 {% block content %}
-<h2>Contact</h2>
-{% if submitted %}
+    <h2 style="text-align: center; border-top: 1px solid #e0e0e0; padding-top: 1.5rem;">Contact</h2>
+<div class="container" style="">
+        {% if submitted %}
     <h2>Email sent successfully</h2>
-{% else %}
-    <form action="email" method="post" role="form">
+        {% else %}
+    <form method="post" style="width: 400px; margin: 0 auto;" novalidate>
         {% csrf_token %}
-        {{ form|crispy }}
-        <button type="submit" class="btn btn-success">Submit</button>
+        <div class="row">
+            <div class="col-6">
+                {{ form.name|as_crispy_field }}
+            </div>
+            <div class="col-6">
+                {{ form.email|as_crispy_field }}
+            </div>
+        </div>
+        <div>
+            {{ form.subject|as_crispy_field }}
+            {{ form.message|as_crispy_field }}
+            <button type="submit" class="btn btn-success">Submit</button>
+        </div>
     </form>
-{% endif %}
-
+        {% endif %}
+</div>
 {% endblock content %}
