--- a/pages/templates/contact.html
+++ b/pages/templates/contact.html
@@ -9,7 +9,7 @@
         {% if submitted %}
     <h2>Email sent successfully</h2>
         {% else %}
-    <form method="post" style="width: 400px; margin: 0 auto;" novalidate>
+    <form method="post" style="" novalidate>
         {% csrf_token %}
         <div class="row">
             <div class="col-6">
