--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -23,8 +23,8 @@
             <a href="{% url 'home' %}"><img src="{% static 'images/logo_transparent.png' %}" height="100" width="100"/></a>
             <ul id="nav-mobile" class="right">
                 <li><a href="{% url 'home' %}">home</a></li>
-                <li><a href="" id="#project">projects</a></li>
-                <li><a href="/contact" id="#contact-me">contact</a></li>
+                <li><a href="/apod" id="#project">projects</a></li>
+                <li><a href="{% url 'contact' %}" id="#contact-me">contact</a></li>
                 <li><a href="" class="btn waves-effect waves-teal" target="_blank">apod</a></li>
             </ul>
         </div>
