--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -57,17 +57,18 @@
 </section>
 {% block content %}
 {% endblock content %}
-<footer style="padding-top: 1rem black;">
+<footer class="footer">
     <div class="container">
-        <h1> STAY CONNECTED</h1>
-        <ul>
-            <li><a href="https://youtube.com" target="_blank"></a></li>
-            <li><a href="https://youtube.com" target="_blank"></a></li>
-            <li><a href="https://youtube.com" target="_blank"></a></li>
-            <li><a href="https://youtube.com" target="_blank"></a></li>
-            <li><a href="https://youtube.com" target="_blank"></a></li>
-            <li><a href="https://youtube.com" target="_blank"></a></li>
-        </ul>
+        <div class="row justify-content-center">
+            <div class="col-sm-7">
+                <p class="connected">STAY CONNECTED</p>
+                <ul class="footer-cols">
+                    <li><a href="https://www.linkedin.com/in/gabriel-usen-097b54184/" target="_blank">LinkedIn</a></li>
+                    <li><a href="https://twitter.com/gabzzyworldwide" target="_blank">Twitter</a></li>
+                    <li><a href="https://github.com/Gabrielusen" target="_blank">Github</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
