--- a/pages/static/css/base.css
+++ b/pages/static/css/base.css
@@ -31,7 +31,7 @@ nav{
     margin: 2rem;
 }
 
-ul{
+ul {
     word-spacing: 1.8rem;
     text-transform: capitalize;
     float: right;
@@ -40,7 +40,7 @@ ul{
 
 }
 
-li{
+li {
     font-size: 1.2rem;
     display: inline;
 }
@@ -128,4 +128,8 @@ section#contact h2 {
 
 form{
     box-sizing: border-box;
+}
+
+.footer-cols{
+
 }
