--- a/pages/templates/success.html
+++ b/pages/templates/success.html
@@ -1,9 +1,7 @@
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Success</title>
-</head>
-<body>
-    <h2>email sent successfully </h2>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %}Success{% endblock title %}
+{% block content %}
+    <h2>Thank you</h2>
+    <p>Your email was sent and I will get back to you as soon as possible</p>
+    <p>Return<a href="{% url 'home' %}">Home</a></p>
+{% endblock content %}
