--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -38,7 +38,7 @@
                     <a href="{% url 'apod' %}" class="btn btn-primary" target="_blank">apod</a>
                 </li>
             </ul>
-            <div class="burger">
+            <div id="burger">
                 <div class="line1"></div>
                 <div class="line2"></div>
                 <div class="line3"></div>
